syntax = "proto3";

option go_package = "github.com/dvasilas/proteus/internal/proto/qpu_api";

import "api/protobuf-spec/qpu.proto";

service QPU {
  rpc Query(stream RequestStream) returns (stream ResponseStreamRecord) {}
  rpc GetConfig(ConfigRequest) returns (ConfigResponse) {}
  rpc GetDataTransfer(GetDataRequest) returns (DataTransferResponse) {}
}

message GetDataRequest{
}

message DataTransferResponse {
  float kBytesTranferred = 1;
}

message RequestStream {
  oneof payload {
    QueryRequest request = 1;
    AckMsg ack = 2;
    PingMsg ping = 3;
  }
}

message ResponseStreamRecord {
  enum StreamRecordType {
      UPDATEOP = 0;
      UPDATEDELTA = 1;
      STATE = 2;
      HEARTBEAT = 3;
      END_OF_STREAM = 4;
    }
  int64 sequence_id = 1;
  StreamRecordType type = 2;
  qpu.LogOperation logOp = 3;
}

message QueryRequest {
  Query query = 1;
  map<string, string> metadata = 2;
  bool sync = 3;
}

message Query {
  message internalQuery {
    qpu.SnapshotTimePredicate clock = 1;
    string bucket = 2;
    repeated qpu.AttributePredicate predicate = 3;
  }
  message SQLQuery {
    string queryStr = 1;
  }
  oneof val {
    internalQuery query_i = 1;
    SQLQuery query_sql = 2;
  }
}

message AckMsg {
  int64 sequence_id = 1;
}

message ConfigRequest {
  qpu.SnapshotTimePredicate clock = 1;
}

message ConfigResponse {
  enum QPUType {
    DBDRIVER = 0;
    FILTER = 1;
    INDEX = 2;
    CACHE = 3;
    FEDERATION_DISPATCHER = 4;
    LOAD_BALANCER = 5;
    LAMBDA = 6;
    NETWORK = 7;
    INTERSECTION = 8;
  }
  QPUType qpu_type = 1;
  repeated qpu.AttributePredicate supportedQueries = 2;
  DataSet dataset = 3;
}

message DataSet {
  message DB {
    map<string, DC> datacenters = 1;
  }
  message DC {
    repeated string shards = 1;
  }
  map<string, DB> databases = 1;
}

message PingMsg {
  int64 seq_id = 1;
}